Fix some alignment

--- a/src/app/components/active-notebook-and-search/active-notebook-and-search.component.scss
+++ b/src/app/components/active-notebook-and-search/active-notebook-and-search.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 57px;
+    height: 45px;
 }
 
 .notes-content-title {
@@ -16,6 +16,11 @@
 
 .notes-content-search {
     width: 200px;
+}
+
+.notes-content-search-container {
+    width: 200px;
+    margin-top: -10px;
 }
 
 .notes-content-search-clearbutton {
