--- a/src/app/components/collection/collection.component.scss
+++ b/src/app/components/collection/collection.component.scss
@@ -74,7 +74,7 @@
 .notebooks-pane-content__list {
     flex: 1;
     overflow: auto;
-    margin-top: 37px;
+    margin-top: 25px;
 }
 
 .notebook {
